Content order reorganization

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,3 +1,17 @@
+@article{_nce_2010,
+ author = {{\.{I}}nce, {\. {I}}kbal Agah and Boeren, Sjef A. and van Oers, Monique M. and Vervoort, Jacques J. M. and Vlak, Just M.},
+ title = {Proteomic analysis of Chilo iridescent virus},
+ journal = {Virology},
+ publisher = {Elsevier {BV}},
+ year = {2010},
+ month = {sep},
+ number = {1},
+ volume = {405},
+ pages = {253--258},
+ url = {https://doi.org/10.1016%2Fj.virol.2010.05.038},
+ doi = {10.1016/j.virol.2010.05.038}
+}
+
 @article{Al_Sarar_2006,
  author = {Al-Sarar, Ali and Hall, Franklin R and Downer, Roger A},
  title = {Impact of spray application methodology on the development of resistance to cypermethrin and spinosad by fall armywormSpodoptera frugiperda (JE Smith)},
@@ -37,6 +51,20 @@
  pages = {1916--1918},
  url = {https://doi.org/10.1126%2Fscience.1146542},
  doi = {10.1126/science.1146542}
+}
+
+@article{B_zier_2017,
+ author = {B{\'{e}}zier, Annie and Harichaux, Gr{\'{e}}goire and Musset, Karine and Labas, Val{\'{e}}rie and Herniou, Elisabeth A},
+ title = {Qualitative proteomic analysis of Tipula oleracea nudivirus occlusion bodies},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2017},
+ month = {feb},
+ number = {2},
+ volume = {98},
+ pages = {284--295},
+ url = {https://doi.org/10.1099%2Fjgv.0.000661},
+ doi = {10.1099/jgv.0.000661}
 }
 
 @article{Bamisile_2018,
@@ -291,6 +319,21 @@
  doi = {10.1128/jvi.00632-07}
 }
 
+@article{Doellinger_2015,
+ author = {Doellinger, Joerg and Schaade, Lars and Nitsche, Andreas},
+ title = {Comparison of the Cowpox Virus and Vaccinia Virus Mature Virion Proteome: Analysis of the Species- and Strain-Specific Proteome},
+ journal = {{PLOS} {ONE}},
+ publisher = {Public Library of Science ({PLoS})},
+ year = {2015},
+ month = {nov},
+ number = {11},
+ volume = {10},
+ pages = {e0141527},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0141527},
+ doi = {10.1371/journal.pone.0141527},
+ editor = {Digard, Paul}
+}
+
 @article{Engelhard_1994,
  author = {Engelhard, E. K. and Kam-Morgan, L. N. and Washburn, J. O. and Volkman, L. E.},
  title = {The insect tracheal system: a conduit for the systemic spread of Autographa californica M nuclear polyhedrosis virus.},
@@ -303,6 +346,19 @@
  pages = {3224--3227},
  url = {https://doi.org/10.1073%2Fpnas.91.8.3224},
  doi = {10.1073/pnas.91.8.3224}
+}
+
+@article{Ferrelli_2012,
+ author = {Ferrelli, Mar{\'{\i}}a and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, V{\'{\i}}ctor},
+ title = {Genome of Epinotia aporema granulovirus ({EpapGV}), a polyorganotropic fast killing betabaculovirus with a novel thymidylate kinase gene},
+ journal = {{BMC} Genomics},
+ publisher = {Springer Science and Business Media {LLC}},
+ year = {2012},
+ number = {1},
+ volume = {13},
+ pages = {548},
+ url = {https://doi.org/10.1186%2F1471-2164-13-548},
+ doi = {10.1186/1471-2164-13-548}
 }
 
 @article{Ferrelli_2018,
@@ -390,6 +446,34 @@
  doi = {10.1126/science.1133348}
 }
 
+@article{Granados_1981,
+ author = {Granados, Robert R. and Lawler, Kathleen A.},
+ title = {In vivo pathway of Autographa californica baculovirus invasion and infection},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {1981},
+ month = {jan},
+ number = {2},
+ volume = {108},
+ pages = {297--308},
+ url = {https://doi.org/10.1016%2F0042-6822%2881%2990438-4},
+ doi = {10.1016/0042-6822(81)90438-4}
+}
+
+@article{Greco_2014,
+ author = {Greco, Todd M. and Diner, Benjamin A. and Cristea, Ileana M.},
+ title = {The Impact of Mass Spectrometry{\textendash}Based Proteomics on Fundamental Discoveries in Virology},
+ journal = {Annual Review of Virology},
+ publisher = {Annual Reviews},
+ year = {2014},
+ month = {nov},
+ number = {1},
+ volume = {1},
+ pages = {581--604},
+ url = {https://doi.org/10.1146%2Fannurev-virology-031413-085527},
+ doi = {10.1146/annurev-virology-031413-085527}
+}
+
 @article{Guan_2016,
  author = {Guan, Zhanwen and Zhong, Ling and Li, Chunyan and Wu, Wenbi and Yuan, Meijin and Yang, Kai},
  title = {The Autographa californica Multiple Nucleopolyhedrovirusac54Gene Is Crucial for Localization of the Major Capsid Protein VP39 at the Site of Nucleocapsid Assembly},
@@ -436,6 +520,20 @@
 @article{Harrison_2018,
  author = {Harrison, Robert L. and Herniou, Elisabeth A. and Jehle, Johannes A. and Theilmann, David A. and Burand, John P. and Becnel, James J. and Krell, Peter J. and van Oers, Monique M. and Mowery, Joseph D. and and, Gary R. Bauchan},
  title = {ICTV Virus Taxonomy Profile: Baculoviridae},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2018},
+ month = {sep},
+ number = {9},
+ volume = {99},
+ pages = {1185--1186},
+ url = {https://doi.org/10.1099%2Fjgv.0.001107},
+ doi = {10.1099/jgv.0.001107}
+}
+
+@article{Harrison_2018a,
+ author = {Harrison, Robert L. and Herniou, Elisabeth A. and Jehle, Johannes A. and Theilmann, David A. and Burand, John P. and Becnel, James J. and Krell, Peter J. and van Oers, Monique M. and Mowery, Joseph D. and and, Gary R. Bauchan},
+ title = {{ICTV} Virus Taxonomy Profile: Baculoviridae},
  journal = {Journal of General Virology},
  publisher = {Microbiology Society},
  year = {2018},
@@ -633,6 +731,20 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  doi = {10.1098/rspb.2003.2498}
 }
 
+@article{Lacey_2002,
+ author = {Lacey, L. A and Vail, P. V and Hoffmann, D. F},
+ title = {Comparative activity of baculoviruses against the codling moth Cydia pomonella and three other tortricid pests of tree fruit},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {2002},
+ month = {may},
+ number = {1},
+ volume = {80},
+ pages = {64--68},
+ url = {https://doi.org/10.1016%2Fs0022-2011%2802%2900036-8},
+ doi = {10.1016/s0022-2011(02)00036-8}
+}
+
 @article{Lacey_2015,
  author = {Lacey, L. A. and Grzywacz, D. and Shapiro-Ilan, D. I. and Frutos, R. and Brownbridge, M. and Goettel, M. S.},
  title = {Insect pathogens as biological control agents: Back to the future},
@@ -771,6 +883,19 @@ Spodoptera frugiperda
  editor = {Ward, Brian M.}
 }
 
+@article{Miller_1978,
+ author = {Miller, L K and Dawes, K P},
+ title = {Restriction endonuclease analysis for the identification of baculovirus pesticides.},
+ journal = {Applied and Environmental Microbiology},
+ publisher = {American Society for Microbiology},
+ year = {1978},
+ number = {2},
+ volume = {35},
+ pages = {411--421},
+ url = {https://doi.org/10.1128%2Faem.35.2.411-421.1978},
+ doi = {10.1128/aem.35.2.411-421.1978}
+}
+
 @article{Moldov_n_2018,
  author = {Moldován, Norbert and Tombácz, Dóra and Szűcs, Attila and Csabai, Zsolt and Balázs, Zsolt and Kis, Emese and Molnár, Judit and Boldogkői, Zsolt},
  title = {Third-generation Sequencing Reveals Extensive Polycistronism and Transcriptional Overlapping in a Baculovirus},
@@ -853,6 +978,20 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.00490-08}
 }
 
+@article{Nesvizhskii_2014,
+ author = {Nesvizhskii, Alexey I},
+ title = {Proteogenomics: concepts, applications and computational strategies},
+ journal = {Nature Methods},
+ publisher = {Springer Science and Business Media {LLC}},
+ year = {2014},
+ month = {oct},
+ number = {11},
+ volume = {11},
+ pages = {1114--1125},
+ url = {https://doi.org/10.1038%2Fnmeth.3144},
+ doi = {10.1038/nmeth.3144}
+}
+
 @article{Nguyen_2018,
  author = {Nguyen, Thong T. and Suryamohan, Kushal and Kuriakose, Boney and Janakiraman, Vasantharajan and Reichelt, Mike and Chaudhuri, Subhra and Guillory, Joseph and Divakaran, Neethu and Rabins, P. E. and Goel, Ridhi and Deka, Bhabesh and Sarkar, Suman and Ekka, Preety and Tsai, Yu-Chih and Vargas, Derek and Santhosh, Sam and Mohan, Sangeetha and Chin, Chen-Shan and Korlach, Jonas and Thomas, George and Babu, Azariah and Seshagiri, Somasekar},
  title = {Comprehensive analysis of single molecule sequencing-derived complete genome and whole transcriptome of Hyposidra talaca nuclear polyhedrosis virus},
@@ -892,6 +1031,34 @@ Spodoptera frugiperda
  pages = {187--195},
  url = {https://doi.org/10.1083%2Fjcb.201001162},
  doi = {10.1083/jcb.201001162}
+}
+
+@article{Passarelli_2011,
+ author = {Passarelli, A. Lorena},
+ title = {Barriers to success: How baculoviruses establish efficient systemic infections},
+ journal = {Virology},
+ publisher = {Elsevier {BV}},
+ year = {2011},
+ month = {mar},
+ number = {2},
+ volume = {411},
+ pages = {383--392},
+ url = {https://doi.org/10.1016%2Fj.virol.2011.01.009},
+ doi = {10.1016/j.virol.2011.01.009}
+}
+
+@article{Perera_2007,
+ author = {Perera, Omaththage and Green, Terry B. and Stevens, Stanley M. and White, Susan and Becnel, James J.},
+ title = {Proteins Associated with Culex nigripalpus Nucleopolyhedrovirus Occluded Virions},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2007},
+ month = {feb},
+ number = {9},
+ volume = {81},
+ pages = {4585--4590},
+ url = {https://doi.org/10.1128%2Fjvi.02391-06},
+ doi = {10.1128/jvi.02391-06}
 }
 
 @article{Pidre_2019,
@@ -947,6 +1114,20 @@ Spodoptera frugiperda
  doi = {10.1007/s11262-014-1113-5}
 }
 
+@article{Sciocco_Cap_2001,
+ author = {Sciocco-Cap, Alicia and Parola, Alejandro D. and Goldberg, Alina V. and Ghiringhelli, Pablo D. and Romanowski, V{\i}{\'}ctor},
+ title = {Characterization of a Granulovirus Isolated from Epinotia aporema Wals. (Lepidoptera: Tortricidae) Larvae},
+ journal = {Applied and Environmental Microbiology},
+ publisher = {American Society for Microbiology},
+ year = {2001},
+ month = {aug},
+ number = {8},
+ volume = {67},
+ pages = {3702--3706},
+ url = {https://doi.org/10.1128%2Faem.67.8.3702-3706.2001},
+ doi = {10.1128/aem.67.8.3702-3706.2001}
+}
+
 @article{Sim_n_2012,
  author = {Simón, Oihane and Williams, Trevor and López-Ferber, Miguel and Caballero, Primitivo},
  title = {Deletion of egt is responsible for the fast-killing phenotype of natural deletion genotypes in a Spodoptera frugiperda multiple nucleopolyhedrovirus population},
@@ -959,6 +1140,17 @@ Spodoptera frugiperda
  pages = {260--263},
  url = {https://doi.org/10.1016%2Fj.jip.2012.08.013},
  doi = {10.1016/j.jip.2012.08.013}
+}
+
+@incollection{Slack_2006,
+ author = {Slack, Jeffery and Arif, Basil M.},
+ title = {The Baculoviruses Occlusion-Derived Virus: Virion Structure and Function},
+ publisher = {Elsevier},
+ year = {2006},
+ pages = {99--165},
+ url = {https://doi.org/10.1016%2Fs0065-3527%2806%2969003-9},
+ doi = {10.1016/s0065-3527(06)69003-9},
+ booktitle = {Advances in Virus Research}
 }
 
 @article{Slavicek_2005,
@@ -1017,21 +1209,21 @@ Spodoptera frugiperda
  doi = {10.1016/j.biotechadv.2005.09.001}
 }
 
-@article{Th_z__2018,
- author = {Thézé, Julien and Lopez-Vaamonde, Carlos and Cory, Jenny and Herniou, Elisabeth},
- title = {Biodiversity, Evolution and Ecological Specialization of Baculoviruses: A Treasure Trove for Future Applied Research},
- journal = {Viruses},
- publisher = {MDPI AG},
- year = {2018},
- month = {jul},
- number = {7},
- volume = {10},
- pages = {366},
- url = {https://doi.org/10.3390%2Fv10070366},
- doi = {10.3390/v10070366}
+@article{Tan_2009,
+ author = {Tan, Yeping and Bideshi, Dennis K. and Johnson, Jeffrey J. and Bigot, Yves and Federici, Brian A.},
+ title = {Proteomic analysis of the Spodoptera frugiperda ascovirus 1a virion reveals 21 proteins},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2009},
+ month = {feb},
+ number = {2},
+ volume = {90},
+ pages = {359--365},
+ url = {https://doi.org/10.1099%2Fvir.0.005934-0},
+ doi = {10.1099/vir.0.005934-0}
 }
 
-@article{Th_z__2018a,
+@article{Th_z__2018,
  author = {Thézé, Julien and Lopez-Vaamonde, Carlos and Cory, Jenny and Herniou, Elisabeth},
  title = {Biodiversity, Evolution and Ecological Specialization of Baculoviruses: A Treasure Trove for Future Applied Research},
  journal = {Viruses},
@@ -1111,6 +1303,35 @@ Spodoptera frugiperda
  pages = {1051--1068},
  url = {https://doi.org/10.2174%2F138945007782151333},
  doi = {10.2174/138945007782151333}
+}
+
+@article{van_Oers_2007a,
+ author = {van Oers, Monique and Vlak, Just},
+ title = {Baculovirus Genomics},
+ journal = {Current Drug Targets},
+ publisher = {Bentham Science Publishers Ltd.},
+ year = {2007},
+ month = {oct},
+ number = {10},
+ volume = {8},
+ pages = {1051--1068},
+ url = {https://doi.org/10.2174%2F138945007782151333},
+ doi = {10.2174/138945007782151333}
+}
+
+@article{Vidick_2013,
+ author = {Vidick, Sarah and Leroy, Baptiste and Palmeira, Leonor and Machiels, B{\'{e}}n{\'{e}}dicte and Mast, Jan and Fran{\c{c}}ois, Sylvie and Wattiez, Ruddy and Vanderplasschen, Alain and Gillet, Laurent},
+ title = {Proteomic Characterization of Murid Herpesvirus 4 Extracellular Virions},
+ journal = {{PLoS} {ONE}},
+ publisher = {Public Library of Science ({PLoS})},
+ year = {2013},
+ month = {dec},
+ number = {12},
+ volume = {8},
+ pages = {e83842},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0083842},
+ doi = {10.1371/journal.pone.0083842},
+ editor = {Favoreel, Herman}
 }
 
 @article{Vieira_2012,
