Add chapter 2 methods

--- a/source/references.bib
+++ b/source/references.bib
@@ -39,6 +39,20 @@
  doi = {10.3390/v9090250}
 }
 
+@article{Altschul_1990,
+ author = {Altschul, Stephen F. and Gish, Warren and Miller, Webb and Myers, Eugene W. and Lipman, David J.},
+ title = {Basic local alignment search tool},
+ journal = {Journal of Molecular Biology},
+ publisher = {Elsevier BV},
+ year = {1990},
+ month = {oct},
+ number = {3},
+ volume = {215},
+ pages = {403--410},
+ url = {https://doi.org/10.1016%2Fs0022-2836%2805%2980360-2},
+ doi = {10.1016/s0022-2836(05)80360-2}
+}
+
 @article{Asser_Kaiser_2007,
  author = {Asser-Kaiser, S. and Fritsch, E. and Undorf-Spahn, K. and Kienzle, J. and Eberle, K. E. and Gund, N. A. and Reineke, A. and Zebitz, C. P. W. and Heckel, D. G. and Huber, J. and Jehle, J. A.},
  title = {Rapid Emergence of Baculovirus Resistance in Codling Moth Due to Dominant, Sex-Linked Inheritance},
@@ -175,6 +189,20 @@
  pages = {980--989},
  url = {https://doi.org/10.1099%2Fvir.0.061127-0},
  doi = {10.1099/vir.0.061127-0}
+}
+
+@article{Bradford_1976,
+ author = {Bradford, Marion M.},
+ title = {A rapid and sensitive method for the quantitation of microgram quantities of protein utilizing the principle of protein-dye binding},
+ journal = {Analytical Biochemistry},
+ publisher = {Elsevier BV},
+ year = {1976},
+ month = {may},
+ number = {1-2},
+ volume = {72},
+ pages = {248--254},
+ url = {https://doi.org/10.1016%2F0003-2697%2876%2990527-3},
+ doi = {10.1016/0003-2697(76)90527-3}
 }
 
 @article{Braunagel_2003,
@@ -332,6 +360,21 @@
  url = {https://doi.org/10.1371%2Fjournal.pone.0141527},
  doi = {10.1371/journal.pone.0141527},
  editor = {Digard, Paul}
+}
+
+@article{Eddy_2011,
+ author = {Eddy, Sean R.},
+ title = {Accelerated Profile HMM Searches},
+ journal = {PLoS Computational Biology},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2011},
+ month = {oct},
+ number = {10},
+ volume = {7},
+ pages = {e1002195},
+ url = {https://doi.org/10.1371%2Fjournal.pcbi.1002195},
+ doi = {10.1371/journal.pcbi.1002195},
+ editor = {Pearson, William R.}
 }
 
 @article{Engelhard_1994,
