Add detected proteins results to chapter 2

--- a/source/references.bib
+++ b/source/references.bib
@@ -632,6 +632,20 @@ Cry1F corn in the Americas: lessons and implications for Bt corn {IRM} in China}
  doi = {10.1111/1744-7917.12826}
 }
 
+@article{Ishihama_2005,
+ author = {Ishihama, Yasushi and Oda, Yoshiya and Tabata, Tsuyoshi and Sato, Toshitaka and Nagasu, Takeshi and Rappsilber, Juri and Mann, Matthias},
+ title = {Exponentially Modified Protein Abundance Index (emPAI) for Estimation of Absolute Protein Amount in Proteomics by the Number of Sequenced Peptides per Protein},
+ journal = {Molecular & Cellular Proteomics},
+ publisher = {Elsevier BV},
+ year = {2005},
+ month = {sep},
+ number = {9},
+ volume = {4},
+ pages = {1265--1272},
+ url = {https://doi.org/10.1074%2Fmcp.m500061-mcp200},
+ doi = {10.1074/mcp.m500061-mcp200}
+}
+
 @article{Ishimwe_2015,
  author = {Ishimwe, Egide and Hodgson, Jeffrey J. and Clem, Rollie J. and Passarelli, A. Lorena},
  title = {Reaching the melting point: Degradative enzymes and protease inhibitors involved in baculovirus infection and dissemination},
