Add draft discussion to chapter 2

--- a/source/references.bib
+++ b/source/references.bib
@@ -25,6 +25,21 @@
  doi = {10.1002/ps.1241}
 }
 
+@article{Alfonso_2012,
+ author = {Alfonso, Victoria and Maroniche, Guillermo A. and Reca, Sol R. and López, María Gabriela and Vas, Mariana del and Taboga, Oscar},
+ title = {AcMNPV Core Gene ac109 Is Required for Budded Virion Transport to the Nucleus and for Occlusion of Viral Progeny},
+ journal = {PLoS ONE},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2012},
+ month = {sep},
+ number = {9},
+ volume = {7},
+ pages = {e46146},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0046146},
+ doi = {10.1371/journal.pone.0046146},
+ editor = {Liang, Chen}
+}
+
 @article{Alletti_2017,
  author = {Alletti, Gianpiero and Sauer, Annette and Weihrauch, Birgit and Fritsch, Eva and Undorf-Spahn, Karin and Wennmann, Jörg and Jehle, Johannes},
  title = {Using Next Generation Sequencing to Identify and Quantify the Genetic Composition of Resistance-Breaking Commercial Isolates of Cydia pomonella Granulovirus},
@@ -247,6 +262,20 @@
  doi = {10.1146/annurev-ento-120709-144748}
 }
 
+@article{Brito_2015,
+ author = {de Brito, Anderson Fernandes and Braconi, Carla Torres and Weidmann, Manfred and Dilcher, Meik and Alves, João Marcelo Pereira and Gruber, Arthur and Andrade Zanotto, Paolo Marinho de},
+ title = {The Pangenome of theAnticarsia gemmatalisMultiple Nucleopolyhedrovirus (AgMNPV)},
+ journal = {Genome Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2015},
+ month = {nov},
+ number = {1},
+ volume = {8},
+ pages = {94--108},
+ url = {https://doi.org/10.1093%2Fgbe%2Fevv231},
+ doi = {10.1093/gbe/evv231}
+}
+
 @article{Burtet_2017,
  author = {Burtet, Leonardo M and Bernardi, Oderlei and Melo, Adriano A and Pes, Maiquel P and Strahl, Thiago T and Guedes, Jerson VC},
  title = {Managing fall armyworm, Spodoptera frugiperda
@@ -275,6 +304,20 @@
  url = {https://doi.org/10.1371%2Fjournal.pone.0062268},
  doi = {10.1371/journal.pone.0062268},
  editor = {Vontas, John}
+}
+
+@article{Chen_2012,
+ author = {Chen, Lin and Hu, Xiaolong and Xiang, Xingwei and Yu, Shaofang and Yang, Rui and Wu, Xiaofeng},
+ title = {Autographa californica multiple nucleopolyhedrovirus odv-e25 (Ac94) is required for budded virus infectivity and occlusion-derived virus formation},
+ journal = {Archives of Virology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2012},
+ month = {jan},
+ number = {4},
+ volume = {157},
+ pages = {617--625},
+ url = {https://doi.org/10.1007%2Fs00705-011-1211-9},
+ doi = {10.1007/s00705-011-1211-9}
 }
 
 @article{Coulibaly_2009,
@@ -362,6 +405,19 @@
  editor = {Digard, Paul}
 }
 
+@article{Dong_2016,
+ author = {Dong, Fang and Wang, Jinwen and Deng, Riqiang and Wang, Xunzhang},
+ title = {Autographa californica multiple nucleopolyhedrovirus gene ac81 is required for nucleocapsid envelopment},
+ journal = {Virus Research},
+ publisher = {Elsevier BV},
+ year = {2016},
+ month = {aug},
+ volume = {221},
+ pages = {47--57},
+ url = {https://doi.org/10.1016%2Fj.virusres.2016.05.005},
+ doi = {10.1016/j.virusres.2016.05.005}
+}
+
 @article{Eddy_2011,
  author = {Eddy, Sean R.},
  title = {Accelerated Profile HMM Searches},
@@ -389,6 +445,20 @@
  pages = {3224--3227},
  url = {https://doi.org/10.1073%2Fpnas.91.8.3224},
  doi = {10.1073/pnas.91.8.3224}
+}
+
+@article{Escasa_2006,
+ author = {Escasa, Shannon R. and Lauzon, Hilary A. M. and Mathur, Amanda C. and Krell, Peter J. and Arif, Basil M.},
+ title = {Sequence analysis of the Choristoneura occidentalis granulovirus genome},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2006},
+ month = {jul},
+ number = {7},
+ volume = {87},
+ pages = {1917--1933},
+ url = {https://doi.org/10.1099%2Fvir.0.81792-0},
+ doi = {10.1099/vir.0.81792-0}
 }
 
 @article{Ferrelli_2012,
@@ -558,6 +628,20 @@
  pages = {775--790},
  url = {https://doi.org/10.1099%2Fvir.0.83566-0},
  doi = {10.1099/vir.0.83566-0}
+}
+
+@article{Harrison_2008a,
+ author = {Harrison, Robert L. and Popham, Holly J. R.},
+ title = {Genomic sequence analysis of a granulovirus isolated from the Old World bollworm, Helicoverpa armigera},
+ journal = {Virus Genes},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2008},
+ month = {jun},
+ number = {3},
+ volume = {36},
+ pages = {565--581},
+ url = {https://doi.org/10.1007%2Fs11262-008-0218-0},
+ doi = {10.1007/s11262-008-0218-0}
 }
 
 @article{Harrison_2018,
@@ -842,6 +926,20 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  editor = {Sandri-Goldin, Rozanne M.}
 }
 
+@article{Leroy_2016,
+ author = {Leroy, Baptiste and Gillet, Laurent and Vanderplasschen, Alain and Wattiez, Ruddy},
+ title = {Structural Proteomics of Herpesviruses},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2016},
+ month = {feb},
+ number = {2},
+ volume = {8},
+ pages = {50},
+ url = {https://doi.org/10.3390%2Fv8020050},
+ doi = {10.3390/v8020050}
+}
+
 @incollection{Leticia_2012,
  author = {Leticia, M. and F., Marcelo and N., Mariano and Daniel, P. and Sciocco-Cap, Alicia and Romanowski, Vctor},
  title = {The Baculoviral Genome},
@@ -938,6 +1036,20 @@ Spodoptera frugiperda
  url = {https://doi.org/10.1371%2Fjournal.pone.0207735},
  doi = {10.1371/journal.pone.0207735},
  editor = {Ward, Brian M.}
+}
+
+@article{McCarthy_2008,
+ author = {McCarthy, Christina B. and Dai, Xiaojiang and Donly, Cam and Theilmann, David A.},
+ title = {Autographa californica multiple nucleopolyhedrovirus ac142, a core gene that is essential for BV production and ODV envelopment},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {2008},
+ month = {mar},
+ number = {2},
+ volume = {372},
+ pages = {325--339},
+ url = {https://doi.org/10.1016%2Fj.virol.2007.10.019},
+ doi = {10.1016/j.virol.2007.10.019}
 }
 
 @article{Miller_1978,
@@ -1199,6 +1311,18 @@ Spodoptera frugiperda
  doi = {10.1603/0022-0493-93.6.1633}
 }
 
+@article{Shi_2017,
+ author = {Shi, Anqi and Hu, Zhaoyang and Zuo, Yachao and Wang, Yan and Wu, Wenbi and Yuan, Meijin and Yang, Kai},
+ title = {Autographa californica Nucleopolyhedrovirusac75is Required for the Nuclear Egress of Nucleocapsids and Intranuclear Microvesicle Formation},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2017},
+ month = {dec},
+ pages = {JVI.01509--17},
+ url = {https://doi.org/10.1128%2Fjvi.01509-17},
+ doi = {10.1128/jvi.01509-17}
+}
+
 @article{Sim_n_2012,
  author = {Sim{\'{o}}n, Oihane and Williams, Trevor and L{\'{o}}pez-Ferber, Miguel and Caballero, Primitivo},
  title = {Deletion of egt is responsible for the fast-killing phenotype of natural deletion genotypes in a Spodoptera frugiperda multiple nucleopolyhedrovirus population},
@@ -1306,6 +1430,20 @@ Spodoptera frugiperda
  pages = {359--365},
  url = {https://doi.org/10.1099%2Fvir.0.005934-0},
  doi = {10.1099/vir.0.005934-0}
+}
+
+@article{Tao_2013,
+ author = {Tao, X. Y. and Choi, J. Y. and Kim, W. J. and Lee, J. H. and Liu, Q. and Kim, S. E. and An, S. B. and Lee, S. H. and Woo, S. D. and Jin, B. R. and Je, Y. H.},
+ title = {The Autographa californica Multiple Nucleopolyhedrovirus ORF78 Is Essential for Budded Virus Production and General Occlusion Body Formation},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2013},
+ month = {may},
+ number = {15},
+ volume = {87},
+ pages = {8441--8450},
+ url = {https://doi.org/10.1128%2Fjvi.01290-13},
+ doi = {10.1128/jvi.01290-13}
 }
 
 @article{Th_z__2018,
@@ -1584,6 +1722,20 @@ Spodoptera frugiperda
  doi = {10.1099/0022-1317-74-1-103}
 }
 
+@article{Wu_2010,
+ author = {Wu, Wenbi and Passarelli, A. Lorena},
+ title = {Autographa californica Multiple Nucleopolyhedrovirus Ac92 (ORF92, P33) Is Required for Budded Virus Production and Multiply Enveloped Occlusion-Derived Virus Formation},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2010},
+ month = {sep},
+ number = {23},
+ volume = {84},
+ pages = {12351--12361},
+ url = {https://doi.org/10.1128%2Fjvi.01598-10},
+ doi = {10.1128/jvi.01598-10}
+}
+
 @article{Xu_2011,
  author = {Xu, Fang and Ince, {\. {I}}kbal Agah and Boeren, Sjef and Vlak, Just M. and van Oers, Monique M.},
  title = {Protein composition of the occlusion derived virus of Chrysodeixis chalcites nucleopolyhedrovirus},
@@ -1612,6 +1764,34 @@ Spodoptera frugiperda
  doi = {10.1002/ps.4644}
 }
 
+@article{Yuan_2008,
+ author = {Yuan, Meijin and Wu, Wenbi and Liu, Chao and Wang, Yanjie and Hu, Zhaoyang and Yang, Kai and Pang, Yi},
+ title = {A highly conserved baculovirus gene p48 (ac103) is essential for BV production and ODV envelopment},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {2008},
+ month = {sep},
+ number = {1},
+ volume = {379},
+ pages = {87--96},
+ url = {https://doi.org/10.1016%2Fj.virol.2008.06.015},
+ doi = {10.1016/j.virol.2008.06.015}
+}
+
+@article{Yuan_2011,
+ author = {Yuan, M. and Huang, Z. and Wei, D. and Hu, Z. and Yang, K. and Pang, Y.},
+ title = {Identification of Autographa californica Nucleopolyhedrovirus ac93 as a Core Gene and Its Requirement for Intranuclear Microvesicle Formation and Nuclear Egress of Nucleocapsids},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2011},
+ month = {aug},
+ number = {22},
+ volume = {85},
+ pages = {11664--11674},
+ url = {https://doi.org/10.1128%2Fjvi.05275-11},
+ doi = {10.1128/jvi.05275-11}
+}
+
 @article{Zhang_2015,
  author = {Zhang, Xiaoxia and Liang, Zhenpu and Yin, Xinming and Shao, Xinfeng},
  title = {Proteomic analysis of the occlusion-derived virus of Clostera anachoreta granulovirus},
@@ -1638,6 +1818,21 @@ Spodoptera frugiperda
  pages = {595},
  url = {https://doi.org/10.3390%2Fv11070595},
  doi = {10.3390/v11070595}
+}
+
+@article{Zhu_2014,
+ author = {Zhu, Zheng and Yin, Feifei and Liu, Xiaoping and Hou, Dianhai and Wang, Jun and Zhang, Lei and Arif, Basil and Wang, Hualin and Deng, Fei and Hu, Zhihong},
+ title = {Genome Sequence and Analysis of Buzura suppressaria Nucleopolyhedrovirus: A Group II Alphabaculovirus},
+ journal = {PLoS ONE},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2014},
+ month = {jan},
+ number = {1},
+ volume = {9},
+ pages = {e86450},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0086450},
+ doi = {10.1371/journal.pone.0086450},
+ editor = {Li, Yi}
 }
 
 
